--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
                 <div class="w-full h-full ">
                     <div class="w-full h-full">
                         <img src="/Assets/images/img4.jpg" alt="phanserv wall construction" class="object-cover w-full h-full">
-                        <div class="absolute top-[60%] left-[30%]  mx-9 md:mx-[7.5rem] font-open_sans space-y-5">
+                        <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2  mt-6 font-open_sans space-y-5">
 
                             <h3 class="font-extrabold text-3xl md:text-6xl font-open_sans text-white">About Us</h3>
                             <p class="text-base md:text-2xl text-white font-sans">
@@ -208,7 +208,7 @@
                                 and many more.
                             </p>
                             <p class="text-gray-500 text-sm font-sans mb-2">
-                                We are dedicated to ensuring the success and safety of our client's projects
+                                We are dedicated to ensuring the success and safety of our client&apos;s projects
                                 through innovative geotechnical solutions. Phanserv establishes itself as the first
                                 choice for clients seeking exceptional geotechnical services in South Africa. Trust
                                 Phanserv to navigate the complexities of geotechnical projects and provide innovative
@@ -294,11 +294,11 @@
                             </p>
                             <p class="text-gray-500 mb-2">
                                 With an impressive track record of 67 successfully completed projects and 30 satisfied
-                                clients in just 8 years, Phanserv's proven capability and experience speak for
+                                clients in just 8 years, Phanserv&apos;s proven capability and experience speak for
                                 themselves. From foundation investigations to rural, township, and urban development, as
                                 well as percolation tests, foundation analysis, construction bridges, and more,
-                                Phanserv's comprehensive range of geotechnical services covers every aspect of your
-                                project's needs.
+                                Phanserv&apos;s comprehensive range of geotechnical services covers every aspect of your
+                                project&apos;s needs.
                             </p>
                             <p class="text-gray-500 mb-2">
                                 For reliability, innovation, and the assurance of a solid foundation, you should
@@ -461,7 +461,7 @@
                         Phanserv is a premier geotechnical solutions provider in South Africa, offering an extensive
                         range of services to cater to diverse project needs. With a team of qualified engineering
                         geologists and professional civil technicians, Phanserv delivers exceptional expertise and
-                        knowledge to ensure clients' projects surpass industry standards. Our comprehensive geotechnical
+                        knowledge to ensure clients&apos; projects surpass industry standards. Our comprehensive geotechnical
                         services encompass:
                     </p>
                     <p class="text-base text-gray-500 font-medium">
@@ -562,7 +562,8 @@
                     <ul class="flex gap-3">
 
                         <li>
-                            <a href="https://web.facebook.com/Phanserv/?_rdc=1&_rdr" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
+                            <a href="https://web.facebook.com/Phanserv/?_rdc=1&_rdr"
+                                class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
                                 <i class="bx bxl-facebook"></i>
                             </a>
                         </li>
@@ -667,7 +668,8 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wethink_</a>  |  <a href="./terms.html">Terms & Conditions</a>  |  &boxh;<a href="/privacy.html">Privacy Policy</a>
+                    by <a href="#" class="">wedoit.</a> | <a href="/privacy/terms.html">Terms & Conditions</a> | <a
+                        href="/privacy/privacy.html">Privacy Policy</a>
                 </p>
             </div>
 
