--- a/contact.html
+++ b/contact.html
@@ -20,17 +20,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Our qualified and competent team is read to help you with you Geotechnology project. We are Committed to...">
-        <meta name="keywords"
+        content="To get in touch with Phanserv and discuss your geotechnical project needs, you
+        have various options available. You can reach out...">
+    <meta name="keywords"
         content="Contact phanserv &dash; contact Phaneretic services (pty) ltd &dash; geo-technical services umtata &dash; Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis &dash; Soil Excavations &dash; Soil Profiling &dash; Rural, Township, and Urban Development &dash; Borehole and Exploration Drilling &dash; DCP Testing &dash; MOD AASHTO and Moisture &dash; CBR Bearing Pressure &dash; Soil Poisoning &dash; Road &dash; Layerworks &dash; Earthworks &dash; Compaction Testing &dash; Cement Content Analysis &dash; Stabilised Aggregate Analysis &dash; Asphalt Core Drilling &dash; ; Rock Aggregate Analysis &dash; Quarry Aggregate Analysis &dash; Geotechnical Investigations &dash; Soil Report Datasets &dash; Tender Monitoring and Evaluation &dash; Independent Research AnalysisSoil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning &dash; Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis- KwaZulu Natal &dash; Orange Free State &dash; Gauteng &dash; Cape Regions &dash; Durban &dash; Ballito &dash; Margate &dash; South Coast &dash; Tongaat &dash; Musgrave &dash; Gateway &dash;  Ramsgate &dash; Shelly Beach &dash; Stanger &dash; Melmoth &dash; Ulundi &dash; Pietermaritzburg &dash; Ladysmith &dash; Estcourt &dash; Newcastle &dash; Volksrust &dash;  Dundee &dash; Midlands &dash; Harrismith &dash; QwaQwa &dash; Drakensberg &dash; Clarens &dash; Bethlehem &dash; Warden &dash;  Kestel &dash; Reitz &dash; Vereeniging &dash; Welkom &dash; Villiers &dash; Umtata &dash; Johannesburg &dash; Pretoria &dash; Bloemfontein" />
-    
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/Assets/css/aos.css">
 
     <!-- twitter -->
     <meta name="twitter:title" content="Contact Phanserv Geotechnical Solutions South Africa" />
     <meta name="twitter:description"
-        content="Our qualified and competent team is read to help you with you Geotechnology project. We are Committed to..." />
+        content="To get in touch with Phanserv and discuss your geotechnical project needs, you
+        have various options available. You can reach out..." />
     <meta name="twitter:image" content="https://phanserve.co.za/Assets/images/img2.jpg" />
 
     <script type="application/ld+json">
@@ -136,7 +138,8 @@
                     </div>
                     <div class="p-3 px-3 md:px-6  bg-custom-orange">
                         <button class="">
-                            <a href="./services.html" class="text-black font-bold text-base font-open_sans">Get a qoute</a>
+                            <a href="./services.html" class="text-black font-bold text-base font-open_sans">Get a
+                                qoute</a>
                         </button>
                     </div>
                 </div>
@@ -150,11 +153,12 @@
                 <div class="overlay w-full h-full top-0 bg-[rgba(0,0,0,0.66)] left-0 absolute "></div>
                 <div class="w-full h-full ">
                     <div class="w-full h-full">
-                        <img src="/Assets/images/img4.jpg" alt="phanserv wall construction" class="object-cover w-full h-full">
-                        <div data-aos="fade up"
-                            class="absolute top-[60%] left-[30%]   mx-9 md:mx-[7.5rem] font-open_sans space-y-5">
+                        <img src="/Assets/images/img4.jpg" alt="phanserv wall construction"
+                            class="object-cover w-full h-full">
+                        <div
+                            class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2  mt-6 font-open_sans space-y-5">
 
-                            <h1 class="font-extrabold text-3xl md:text-6xl font-open_sans text-white">Contact Us</h1>
+                            <h1 class="font-extrabold text-3xl md:text-6xl font-open_sans text-white">Contact us</h1>
                             <p class="text-base md:text-2xl text-white font-sans">
 
                             </p>
@@ -167,41 +171,49 @@
         <section class="w-full mb-20">
             <div class="h-full" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
                 <div class="flex items-center flex-row">
-                    <div class="bg-custom-blue text-start md:flex-[0.5] h-full md:h-screen">
-                        <div class="space-y-5 text-white mx-14 md:mx-24 my-10 relative md:space-y-7">
-                            <span class="font-bold text-sm md:text-md text-custom-orange font-open_sans">
-                                WHY CHOOSE US?
+                    <div class="bg-white text-start md:flex-[0.5] h-full md:h-screen">
+                        <div class="space-y-5 text-gray-500 mx-14 md:mx-24 my-10 relative md:space-y-7">
+                            <span class="font-bold text-sm uppercase md:text-md text-custom-orange font-open_sans">
+                                How To contact us?
                             </span>
                             <h2 class="text-3xl font-open_sans font-bold md:text-4xl">High Quality Soil Classification &
                                 Innovative Geotechnical Projects</h2>
                             <div class="space-y-4">
+                                <div class="space-y-3">
+                                    <p class="text-sm md:text-base font-sans">
+                                        To get in touch with Phanserv and discuss your geotechnical project needs, you
+                                        have various options available. You can reach out to us via email using either
+                                        <strong class="text-custom-orange">&apos;info@phanserv.co.za&apos;</strong> or <strong
+                                            class="text-custom-orange">&apos;accounts@phanserv.co.za&apos;</strong>
+                                    </p>
+                                    <p class="text-sm md:text-base font-sans">
+                                        Additionally, you can visit our physical office located at
+                                        <strong class="text-custom-orange">&apos;22 Gerald Spilkin Street, Ikhwezi Township,
+                                            Umtata, 5099&apos;</strong>, which provides face&dash;to&dash;face opportunity
+                                        for detailed discussions.
+                                    </p>
+                                    <p class="text-sm md:text-base font-sans">
+                                        For more immediate communication, clients can also call or message us at the
+                                        following contact numbers
+                                        <strong class="text-custom-orange">&apos;+27 62 280 2591&apos;</strong> and <strong
+                                            class="text-custom-orange">&apos;+27 83 513 32008&apos;</strong> via whatapp or
+                                        traditional calls.
+                                    </p>
+                                </div>
                                 <blockquote class="text-sm md:text-base font-sans">
-                                    Choosing Phanserv for your geotechnical needs is a decision that guarantees
-                                    exceptional results and peace of mind. With a team of qualified and competent
-                                    engineering geologists and professional civil technicians, Phanserv brings 8 years
-                                    of invaluable industry experience to every project
+                                    &quot;When choosing Phaneretic Services for your next geo-technical project, you can be
+                                    assured of a partner committed to excellence and going beyond industry standards.
+                                    With a team of qualified engineering geologists and professional civil technicians,
+                                    We offer a comprehensive range of geo-technical services tailored to meet each client&apos;s specific needs.&quot;&UnderBar;Phanserv CEO
                                 </blockquote>
-                                <p class="text-sm md:text-base font-sans">
-                                    Our commitment to working closely with clients ensures that each geotechnical
-                                    service provided far exceeds industry standards, tailored to suit the unique
-                                    challenges of every project. Having successfully completed 67 projects and earned
-                                    the satisfaction of 30 clients, Phanserv's track record speaks for itself.
-                                </p>
-                                <p class="text-sm md:text-base font-sans">
-                                    From foundation investigations to construction bridges and a diverse range of other
-                                    geotechnical services, Phanserv offers comprehensive solutions for rural, township,
-                                    and urban developments. When you choose Phanserv, you choose a trusted partner
-                                    dedicated to delivering excellence in geotechnical solutions for your projects in
-                                    South Africa.
-                                </p>
                             </div>
 
 
                         </div>
                     </div>
-                    <div
-                        class="md:flex-[0.5] overflow-hidden hidden relative md:block md:h-screen">
-                        <img src="/Assets/images/about-3.jpg" alt="construction analysis" class=" md:h-screen md:w-full object-cover" />
+                    <div class="md:flex-[0.5] overflow-hidden hidden relative md:block md:h-screen">
+                        <img src="/Assets/images/about-3.jpg" alt="construction analysis"
+                            class=" md:h-screen md:w-full object-cover" />
                         <div class="absolute top-1/2 space-y-6 -translate-y-1/2">
                             <div class="bg-custom-orange text-white p-6">
                                 <div class="space-y-3 grid">
@@ -222,8 +234,7 @@
         </section>
         <section class="w-full">
             <div class="mb-20 container">
-                <div
-                    class="relative overflow-hidden bg-custombgimage p-6 w-full h-full md:h-80">
+                <div class="relative overflow-hidden bg-custombgimage p-6 w-full h-full md:h-80">
 
                     <div class="text-center grid items-center justify-center md:h-full">
                         <div class=" z-40 text-white space-y-5">
@@ -233,13 +244,17 @@
                                     QUALITY AND AFFORDABLE SERVICES</h4>
                             </div>
                             <div>
-                                <p class="md:text-base">Geotechnical Investigations &dash; Borehole and Exploration Drilling &dash; including rural, township, and
-                        urban development &dash; Concrete Strength Testing &dash; Trial Pit Profiling and Excavations &dash; Water
-                        Quality Testing &dash; Borehole and Exploration Drilling &dash; Environmental Impact Assessments and
-                        Audits &dash; Rural, Township, and Urban Development &dash; Foundation Analysis &dash; DCP, DPL, and DPSH
-                        Testing &dash; Borehole Core Profiling or Percussion Chip Logging</p>
+                                <p class="md:text-base">Geotechnical Investigations &dash; Borehole and Exploration
+                                    Drilling &dash; including rural, township, and
+                                    urban development &dash; Concrete Strength Testing &dash; Trial Pit Profiling and
+                                    Excavations &dash; Water
+                                    Quality Testing &dash; Borehole and Exploration Drilling &dash; Environmental Impact
+                                    Assessments and
+                                    Audits &dash; Rural, Township, and Urban Development &dash; Foundation Analysis
+                                    &dash; DCP, DPL, and DPSH
+                                    Testing &dash; Borehole Core Profiling or Percussion Chip Logging</p>
                             </div>
-                            
+
 
 
                         </div>
@@ -283,10 +298,12 @@
                                 Email Us:
                             </h4>
                             <div>
-                                <a href="" id="contact-email-" class="block text-sm  md:text-base font-normal text-white">
+                                <a href="" id="contact-email-"
+                                    class="block text-sm  md:text-base font-normal text-white">
                                     info@phanserv.co.za
                                 </a>
-                                <a href="" id="contact-email-2" class="block text-sm md:text-base  font-normal text-white">
+                                <a href="" id="contact-email-2"
+                                    class="block text-sm md:text-base  font-normal text-white">
                                     accounts@phanserv.co.za
                                 </a>
                             </div>
@@ -336,7 +353,8 @@
                     <ul class="flex gap-3">
 
                         <li>
-                            <a href="https://web.facebook.com/Phanserv/?_rdc=1&_rdr" class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
+                            <a href="https://web.facebook.com/Phanserv/?_rdc=1&_rdr"
+                                class="bg-custom-blue text-xl p-3 duration-300 ease-in text-white">
                                 <i class="bx bxl-facebook"></i>
                             </a>
                         </li>
@@ -441,7 +459,8 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wethink_</a>  |  <a href="./terms.html">Terms & Conditions</a>  |  &boxh;<a href="/privacy.html">Privacy Policy</a>
+                    by <a href="#" class="">wedoit.</a> | <a href="/privacy/terms.html">Terms & Conditions</a> | <a
+                        href="/privacy/privacy.html">Privacy Policy</a>
                 </p>
             </div>
 
