--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                             Phanserv is a premier geotechnical solutions provider in South Africa, offering an extensive
                             range of services to cater to diverse project needs. With a team of qualified engineering
                             geologists and professional civil technicians, Phanserv delivers exceptional expertise and
-                            knowledge to ensure clients' projects surpass industry standards.
+                            knowledge to ensure client&apos;s projects surpass industry standards.
                         </p>
                     </div>
                     <div data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000"
@@ -352,7 +352,7 @@
                                 <div class="mb-4 space-y-4">
                                     <h3 class="text-black text-xl font-open_sans font-bold">Reporting & Analysis</h3>
                                     <p class="text-base text-gray-500">
-                                        Phanserv's foundation analysis services guarantee the selection of the most
+                                        Phanserv&apos;s foundation analysis services guarantee the selection of the most
                                         suitable foundation...
                                     </p>
                                 </div>
@@ -393,7 +393,7 @@
                                     Our commitment to working closely with clients ensures that each geotechnical
                                     service provided far exceeds industry standards, tailored to suit the unique
                                     challenges of every project. Having successfully completed 67 projects and earned
-                                    the satisfaction of 30 clients, Phanserv's track record speaks for itself.
+                                    the satisfaction of 30 clients, Phanserv&apos;s track record speaks for itself.
                                 </p>
                                 <p class="text-sm md:text-base font-sans">
                                     From foundation investigations to construction bridges and a diverse range of other
@@ -739,8 +739,8 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wethink_</a> | <a href="./terms.html">Terms & Conditions</a> | &boxh;<a
-                        href="/privacy.html">Privacy Policy</a>
+                    by <a href="#" class="">wedoit.</a> | <a href="/privacy/terms.html">Terms & Conditions</a> | <a
+                        href="/privacy/privacy.html">Privacy Policy</a>
                 </p>
             </div>
 
