--- a/projects.html
+++ b/projects.html
@@ -127,7 +127,7 @@
                     <div class="w-full h-full">
                         <img src="/Assets/images/img4.jpg" alt="phanserv wall construction"
                             class="object-cover w-full h-full">
-                        <div class="absolute top-[60%] left-[30%]  mx-9 md:mx-[7.5rem] font-open_sans space-y-5">
+                        <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2  mt-6 font-open_sans space-y-5">
 
                             <h1 class="font-extrabold text-3xl md:text-6xl font-open_sans text-white">Our projects</h1>
                             <p class="text-base md:text-2xl text-white font-sans">
@@ -627,8 +627,8 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wethink_</a> | <a href="./terms.html">Terms & Conditions</a> | &boxh;<a
-                        href="/privacy.html">Privacy Policy</a>
+                    by <a href="#" class="">wedoit.</a> | <a href="/privacy/terms.html">Terms & Conditions</a> | <a
+                        href="/privacy/privacy.html">Privacy Policy</a>
                 </p>
             </div>
 
