--- a/services.html
+++ b/services.html
@@ -22,13 +22,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
         content="Soil Testing &dash; Geotechnical Investigations &dash; Geologists around Eastern Cape &dash; geo-technical solutions south africa &dash;  Compaction Testing &dash; Soil Poisoning Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis &dash; Soil Excavations &dash; Soil Profiling &dash; Rural, Township, and Urban Development &dash; Borehole and Exploration Drilling &dash; DCP Testing &dash; MOD AASHTO and Moisture &dash; CBR Bearing Pressure &dash; Soil Poisoning &dash; Road &dash; Layerworks &dash; Earthworks &dash; Compaction Testing &dash; Cement Content Analysis &dash; Stabilised Aggregate Analysis &dash; Asphalt Core Drilling &dash; Rock Aggregate Analysis – Quarry Aggregate Analysis &dash; Geotechnical Investigations – Soil Report Datasets – Tender Monitoring and Evaluation – Independent Research AnalysisSoil Testing &dash; Geotechnical Investigations &dash; Compaction Testing &dash; Soil Poisoning &dash; Concrete Strength Testing &dash; Water Quality Testing &dash; Independent Research Analysis &dash; Exploration &dash; Water &dash; Borehole &dash; Drilling &dash; Cement Content Analysis- KwaZulu Natal &dash; Orange Free State &dash; Gauteng &dash; Cape Regions &dash; Durban &dash; Ballito &dash; Margate &dash; South Coast &dash; Tongaat &dash; Musgrave &dash; Gateway &dash;  Ramsgate &dash; Shelly Beach &dash; Stanger &dash; Melmoth &dash; Ulundi &dash; Pietermaritzburg &dash; Ladysmith &dash; Estcourt &dash; Newcastle &dash; Volksrust &dash;  Dundee &dash; Midlands &dash; Harrismith &dash; QwaQwa &dash; Drakensberg &dash; Clarens &dash; Bethlehem &dash; Warden &dash;  Kestel &dash; Reitz &dash; Vereeniging &dash; Welkom &dash; Villiers &dash; Umtata &dash; Johannesburg &dash; Pretoria &dash; Bloemfontein" />
-    <meta name="description" content="Phanserv's comprehensive range of geotechnical services, coupled with their team's expertise and commitment to excellence, make them the trusted choice for successful and reliable project outcomes across various industries in South Africa...
+    <meta name="description" content="Phanserv&apos;s comprehensive range of geotechnical services, coupled with their team&apos;s expertise and commitment to excellence, make them the trusted choice for successful and reliable project outcomes across various industries in South Africa...
     
     ">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="twitter:title" content="Geotechnical Services We Provide &dash; Phanserv Geotechnical" />
     <meta name="twitter:description"
-        content=" Phanserv's comprehensive range of geotechnical services, coupled with their team's expertise and commitment to excellence, make them the trusted choice for successful and reliable project outcomes.." />
+        content=" Phanserv&apos;s comprehensive range of geotechnical services, coupled with their team&apos;s expertise and commitment to excellence, make them the trusted choice for successful and reliable project outcomes.." />
     <meta name="twitter:image" content="https://phanserve.co.za/Assets/images/img2.jpg" />
 
     <meta property="og:type" content="business.business">
@@ -124,7 +124,7 @@
                     <div class="w-full h-full">
                         <img src="/Assets/images/img4.jpg" alt="phanserv wall construction"
                             class="object-cover w-full h-full">
-                        <div class="absolute top-[60%] left-[30%]  mx-9 md:mx-[7.5rem] font-open_sans space-y-5">
+                        <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2  mt-6 font-open_sans space-y-5">
 
                             <span class="font-extrabold text-3xl md:text-6xl font-open_sans text-white">Our
                                 Services</span>
@@ -165,7 +165,7 @@
                                             provide expert recommendations for
                                             structures, foundations, roads, and civil construction projects. They
                                             utilize
-                                            advanced techniques to assess soil grading, Atterberg's limits, and
+                                            advanced techniques to assess soil grading, Atterberg&apos;s limits, and
                                             compaction
                                             testing, ensuring the right foundation design and construction methods.</li>
                                     </ul>
@@ -198,7 +198,7 @@
                                     </h3>
                                     <ul class="text-gray-500 text-sm font-sans list-disc p-2">
                                         <li>
-                                            Phanserv's trial pit profiling and excavation services provide valuable
+                                            Phanserv&apos;s trial pit profiling and excavation services provide valuable
                                             insights into the ground conditions, enabling informed decision-making
                                             during the construction process.
                                         </li>
@@ -273,7 +273,7 @@
                                     </h3>
                                     <ul class="text-gray-500 text-sm font-sans list-disc p-2">
                                         <li>
-                                            Phanserv's foundation analysis services guarantee the selection of the most
+                                            Phanserv&apos;s foundation analysis services guarantee the selection of the most
                                             suitable foundation types and designs for stability and longevity.
 
                                         </li>
@@ -310,7 +310,7 @@
                                     </h3>
                                     <ul class="text-gray-500 text-sm font-sans list-disc p-2">
                                         <li>
-                                            Phanserv's borehole core profiling and percussion chip logging services
+                                            Phanserv&apos;s borehole core profiling and percussion chip logging services
                                             provide valuable information about the subsurface layers, aiding in
                                             geological assessments and foundation design.
                                         </li>
@@ -340,10 +340,10 @@
                     </ul>
                     <div class="text-center">
                         <blockquote class="text-gray-500 font-semibold text-base">
-                            "Phanserv's comprehensive range of geotechnical services, coupled with their team's
+                            &quot;Phanserv&apos;s comprehensive range of geotechnical services, coupled with their team&apos;s
                             expertise
                             and commitment to excellence, make them the trusted choice for successful and reliable
-                            project outcomes across various industries in South Africa." &dash; Phanserv CEO
+                            project outcomes across various industries in South Africa.&quot; &dash; Phanserv CEO
                         </blockquote>
                     </div>
                 </div>
@@ -619,8 +619,8 @@
                 <p class="inline-block md:text-center">
                     &copy;
                     <script>document.write(new Date().getFullYear());</script> Phaneretic Services. All Rights Reserved
-                    by <a href="#" class="">wethink_</a> | <a href="./terms.html">Terms & Conditions</a> | &boxh;<a
-                        href="/privacy.html">Privacy Policy</a>
+                    by <a href="#" class="">wedoit.</a> | <a href="/privacy/terms.html">Terms & Conditions</a> | <a
+                        href="/privacy/privacy.html">Privacy Policy</a>
                 </p>
             </div>
 
