--- a/projects.html
+++ b/projects.html
@@ -396,6 +396,23 @@
                                 class="absolute bg-[#00000085] top-1/2 transition-all duration-500 -translate-x-1/2 -translate-y-1/2 left-1/2 z-30 h-full hidden w-full group-hover:block">
                             </div>
                             <div>
+                                <img class="" src="/Assets/images/img/img.jpg" alt="soil" />
+                            </div>
+                            <div
+                                class="-bottom-full transition-all duration-500 group-hover:bottom-4 absolute p-6 z-50 w-full ">
+                                <div class="text-white space-y-3">
+                                    <h5 class="text-xl font-">Eastern cape</h5>
+                                    <p class="text-3xl font-semibold">Soil analysis for borehole drilling</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project-item overflow-hidden">
+                        <div class="relative group transition-all duration-500 overflow-hidden">
+                            <div
+                                class="absolute bg-[#00000085] top-1/2 transition-all duration-500 -translate-x-1/2 -translate-y-1/2 left-1/2 z-30 h-full hidden w-full group-hover:block">
+                            </div>
+                            <div>
                                 <img class="" src="/Assets/images/img/img3.jpg"
                                     alt="Bore hole construction and analysis" />
                             </div>
